; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-af-list.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-af-list.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@af_names = common dso_local global i8** null, align 8
@.str = private unnamed_addr constant [11 x i8] c"huddlduddl\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %40, %2
  %8 = load i32, i32* %6, align 4
  %9 = load i8**, i8*** @af_names, align 8
  %10 = call i32 @ELEMENTSOF(i8** %9)
  %11 = icmp ult i32 %8, %10
  br i1 %11, label %12, label %43

12:                                               ; preds = %7
  %13 = load i8**, i8*** @af_names, align 8
  %14 = load i32, i32* %6, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds i8*, i8** %13, i64 %15
  %17 = load i8*, i8** %16, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %39

19:                                               ; preds = %12
  %20 = load i32, i32* %6, align 4
  %21 = call i32* @af_to_name(i32 %20)
  %22 = load i8**, i8*** @af_names, align 8
  %23 = load i32, i32* %6, align 4
  %24 = zext i32 %23 to i64
  %25 = getelementptr inbounds i8*, i8** %22, i64 %24
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 @streq(i32* %21, i8* %26)
  %28 = call i32 @assert_se(i32 %27)
  %29 = load i8**, i8*** @af_names, align 8
  %30 = load i32, i32* %6, align 4
  %31 = zext i32 %30 to i64
  %32 = getelementptr inbounds i8*, i8** %29, i64 %31
  %33 = load i8*, i8** %32, align 8
  %34 = call i32 @af_from_name(i8* %33)
  %35 = load i32, i32* %6, align 4
  %36 = icmp eq i32 %34, %35
  %37 = zext i1 %36 to i32
  %38 = call i32 @assert_se(i32 %37)
  br label %39

39:                                               ; preds = %19, %12
  br label %40

40:                                               ; preds = %39
  %41 = load i32, i32* %6, align 4
  %42 = add i32 %41, 1
  store i32 %42, i32* %6, align 4
  br label %7

43:                                               ; preds = %7
  %44 = call i32 (...) @af_max()
  %45 = call i32* @af_to_name(i32 %44)
  %46 = icmp eq i32* %45, null
  %47 = zext i1 %46 to i32
  %48 = call i32 @assert_se(i32 %47)
  %49 = call i32* @af_to_name(i32 -1)
  %50 = icmp eq i32* %49, null
  %51 = zext i1 %50 to i32
  %52 = call i32 @assert_se(i32 %51)
  %53 = call i32 @af_from_name(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %54 = load i32, i32* @EINVAL, align 4
  %55 = sub nsw i32 0, %54
  %56 = icmp eq i32 %53, %55
  %57 = zext i1 %56 to i32
  %58 = call i32 @assert_se(i32 %57)
  %59 = call i32 @af_from_name(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0))
  %60 = load i32, i32* @EINVAL, align 4
  %61 = sub nsw i32 0, %60
  %62 = icmp eq i32 %59, %61
  %63 = zext i1 %62 to i32
  %64 = call i32 @assert_se(i32 %63)
  ret i32 0
}

declare dso_local i32 @ELEMENTSOF(i8**) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @streq(i32*, i8*) #1

declare dso_local i32* @af_to_name(i32) #1

declare dso_local i32 @af_from_name(i8*) #1

declare dso_local i32 @af_max(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
